[gd_scene load_steps=13 format=3 uid="uid://bdjv16822kaur"]

[ext_resource type="Script" path="res://main.gd" id="1_1c8ih"]
[ext_resource type="Texture2D" uid="uid://c1b7w37rjwrk1" path="res://centre.png" id="1_7whlr"]
[ext_resource type="Texture2D" uid="uid://dacxfyjrewl2b" path="res://ball.png" id="1_q53yj"]
[ext_resource type="Texture2D" uid="uid://cpd6r1i4176e6" path="res://paddle.png" id="2_0g6h1"]
[ext_resource type="Script" path="res://ball.gd" id="3_m1hx2"]
[ext_resource type="FontFile" uid="uid://bcbljsoqwk1o4" path="res://font.ttf" id="4_rvmn3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h7wga"]
radius = 570.574

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f6x30"]
size = Vector2(20, 1100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnfl5"]
size = Vector2(1150, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eb1f4"]
size = Vector2(1150, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nb76m"]
size = Vector2(20, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tqoox"]
size = Vector2(20, 648)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_1c8ih")

[node name="Centre" type="Sprite2D" parent="."]
position = Vector2(576, 324)
rotation = 1.5708
scale = Vector2(0.77, 0.77)
texture = ExtResource("1_7whlr")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.03, 0.03)
collision_mask = 3
script = ExtResource("3_m1hx2")

[node name="Sprite" type="Sprite2D" parent="Ball"]
scale = Vector2(1, 1)
texture = ExtResource("1_q53yj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_h7wga")

[node name="PaddleLeft" type="StaticBody2D" parent="."]
position = Vector2(60, 325)
scale = Vector2(0.1, 0.12)

[node name="Sprite" type="Sprite2D" parent="PaddleLeft"]
texture = ExtResource("2_0g6h1")
flip_h = true

[node name="Collision" type="CollisionShape2D" parent="PaddleLeft"]
position = Vector2(100, 8.33398)
shape = SubResource("RectangleShape2D_f6x30")

[node name="PaddleRight" type="StaticBody2D" parent="."]
position = Vector2(1092, 324)
scale = Vector2(0.1, 0.12)

[node name="Sprite" type="Sprite2D" parent="PaddleRight"]
texture = ExtResource("2_0g6h1")

[node name="Collision" type="CollisionShape2D" parent="PaddleRight"]
position = Vector2(-100, 0)
shape = SubResource("RectangleShape2D_f6x30")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -7.5)
shape = SubResource("RectangleShape2D_qnfl5")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, 655.5)
shape = SubResource("RectangleShape2D_eb1f4")

[node name="ZoneLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneLeft"]
position = Vector2(-9, 324)
shape = SubResource("RectangleShape2D_nb76m")

[node name="ZoneRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneRight"]
position = Vector2(1161, 324)
shape = SubResource("RectangleShape2D_tqoox")

[node name="ScoreLeft" type="Label" parent="."]
offset_left = 188.0
offset_top = 10.0
offset_right = 388.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_rvmn3")
theme_override_font_sizes/font_size = 85
text = "0"
horizontal_alignment = 1

[node name="ScoreRight" type="Label" parent="."]
offset_left = 764.0
offset_top = 5.0
offset_right = 964.0
offset_bottom = 91.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_rvmn3")
theme_override_font_sizes/font_size = 85
text = "0"
horizontal_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="ZoneLeft" to="." method="_on_zone_left_body_entered"]
[connection signal="body_entered" from="ZoneRight" to="." method="_on_zone_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
